# nova

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
resources/fonts/: CascadiaCode.ttf.h
resources/shaders/: compile_shaders.ps1
resources/shaders/digital_coded_exposure/: clear.comp  clear_comp.h  dce.comp  dce_comp.h  dceo.comp  dceo_comp.h  process.comp  process_comp.h
resources/shaders/spinning_cube/: spinning_cube.frag  spinning_cube.vert  spinning_cube_frag.h  spinning_cube_vert.h
resources/shaders/visualizer/frames/: frames.frag  frames.vert  frames_frag.h  frames_vert.h
resources/shaders/visualizer/grid/: grid.frag  grid.vert  grid_frag.h  grid_vert.h
resources/shaders/visualizer/points/: points.vert  points_frag.h  points_vert.h
resources/shaders/visualizer/text/: text.frag  text.vert  text_frag.h  text_vert.h
src/: Camera.hh  DataAcquisition.hh  DataWriter.hh  DigitalCodedExposure.hh  EventData.hh  GUI.hh  ParameterStore.hh  RenderTarget.hh  Scrubber.hh  SpinningCube.hh  UploadBuffer.hh  Visualizer.hh  main.cc  pch.hh  threads.hh
testing/: integration_tests.cc  unit_tests.cc
